<resources>
    <string name="app_name">Releave</string>

    <!-- Login -->
    <string name="title_activity_sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="error_sign_in">Error signing in</string>
    <string name="error_invalid_credentials">Invalid credentials</string>

    <!-- Email confirmation -->
    <string name="confirm_email">Please check your email for a confirmation</string>
    <string name="resend_verification_email">Resend verification email</string>
    <string name="verification_email_sent">Verification email sent</string>
    <string name="verification_email_error">Error sending verification email</string>
    <string name="sign_out">Sign out</string>

    <!-- Password reset -->
    <string name="btn_reset">Reset</string>
    <string name="action_reset_password">Reset password</string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="password_reset_email_error">Error sending password reset email</string>

    <!-- My profile -->
    <string name="btn_sign_out">Sign out</string>

    <!-- Menu -->
    <string name="menu_item_sign_out">Sign out</string>

    <string name="mapbox_access_key">
        pk.eyJ1IjoiaG1tZWx0b24iLCJhIjoiY2s1ajY0bTczMDAwazNvcWxjcWFhMmhwZSJ9.zWdyOhGLXHtai1gZPhx84Q
    </string>
    <string name="places_api_key">AIzaSyDEpI82W6K3lk3qX7XxxHYnUmLH9qPYWpY</string>

    <!-- Dialogs -->
    <string name="alert_must_give_location_permission">Please grant location permissions in settings</string>
    <string name="snackbar_no_nearby_places_found">No nearby places found</string>
    <string name="snackbar_error_fetching_nearby_places">Error fetching nearby places</string>

    <!-- Add restroom -->
    <string name="label_place">Location info</string>
    <string name="label_new_restroom_details">Location details</string>
    <string name="label_is_locked">Requires key or code</string>
    <string name="label_is_single_occupancy">Single occupancy</string>
    <string name="label_is_gender_neutral">Gender neutral</string>
    <string name="label_rating">Rating</string>

    <!-- Buttons -->
    <string name="btn_submit">Submit</string>
</resources>
